Edited Str_concat, Str_compare, str.h, & edited the readme

--- a/readme
+++ b/readme
@@ -3,7 +3,7 @@ Assignment 2 readme File
 ------------------------------------------------------------------------
 What is your name?
 
-
+Arnold Jiang
 
 ------------------------------------------------------------------------
 What authorized sources of information did you use to complete the
@@ -27,6 +27,7 @@ to the Committee on Discipline. Write "None" if you used no
 unauthorized sources of information.
 
 
+Austin - COS 217 Lab Ta
 
 ------------------------------------------------------------------------
 What is your assessment of the assignment? Was it helpful? Was it fun?
