gave lab ta credit in readme, edited Str_search function in strp.c, & minor changes in replace.c, str.h, and stra.c

--- a/readme
+++ b/readme
@@ -29,6 +29,7 @@ unauthorized sources of information.
 
 Austin - COS 217 Lab Ta
 Kaan - COS 217 Lab Ta
+Emlio - COS 217 Lab Ta
 
 ------------------------------------------------------------------------
 What is your assessment of the assignment? Was it helpful? Was it fun?
