--- a/readme
+++ b/readme
@@ -25,8 +25,10 @@ The course's textbooks.
 The man pages on the armlab cluster.
 
 The course's current staff members outside of class time through office hours.
+Donna's OH
 
 The course's current staff members outside of class time through meetings.
+
 
 The course's current staff members outside of class time through Ed.
 
